# wikiscroll

wikiscroll-api/: .gitignore  Cargo.toml  bacon.toml
wikiscroll-api/api/: Cargo.toml
wikiscroll-api/api/src/: article_handler.rs  lib.rs
wikiscroll-api/application/: Cargo.toml
wikiscroll-api/application/src/: lib.rs
wikiscroll-api/application/src/article/: mod.rs  read.rs
wikiscroll-api/domain/: Cargo.toml
wikiscroll-api/domain/src/: models.rs  schema.rs
wikiscroll-api/shared/src/: response_models.rs
wikiscroll-app/: package-lock.json  package.json
wikiscroll-app/src/: index.tsx
wikiscroll-app/src/components/ArticleView/: index.tsx
wikiscroll-app/src/hooks/: useRandomArticle.ts
wikiscroll-app/src/services/article/: http.ts  index.ts  schemas.ts
wikiscroll-client/: package-lock.json  package.json
wikiscroll-client/src/: App.tsx  index.css  main.tsx
