[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
shared = { path = "../shared" }

serde_json = "1.0.88"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }